# Test123

./: .editorconfig  .gitignore  121212.md.txt  AvorionLike.sln  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  Makefile  README.md  blenderaddon1.md
AvorionLike/: Program.cs  (+4 more)
engine/: CMakeLists.txt  CMakePresets.json  README.md  SubspaceEngine.vcxproj  SubspaceEngine.vcxproj.filters  SubspaceGame.vcxproj  SubspaceTests.vcxproj
engine/data/factions/: ascended_archive.json  ashen_clades.json  helix_covenant.json  iron_dominion.json  nomad_continuum.json
engine/include/achievement/: AchievementSystem.h
engine/include/ai/: AIDecisionSystem.h  AIShipBuilder.h  AISteeringSystem.h
engine/include/audio/: AudioSystem.h
engine/include/combat/: CombatSystem.h  LootSystem.h  ShieldSystem.h  StatusEffectSystem.h  TargetLockSystem.h
engine/include/core/: Engine.h  Math.h
engine/include/core/config/: ConfigurationManager.h
engine/include/core/ecs/: Entity.h  EntityManager.h  IComponent.h  SystemBase.h
engine/include/core/events/: EventSystem.h  GameEvents.h
engine/include/core/logging/: Logger.h
engine/include/core/persistence/: SaveGameManager.h
engine/include/core/physics/: CollisionLayers.h  Octree.h  PhysicsComponent.h  PhysicsSystem.h  SpatialHash.h
engine/include/core/resources/: Inventory.h
engine/include/crafting/: CraftingSystem.h  RefinerySystem.h
engine/include/crew/: CrewSystem.h
engine/include/debug_tools/: DebugRenderer.h  PerformanceMonitor.h
engine/include/diplomacy/: DiplomacySystem.h
engine/include/factions/: FactionProfile.h  SilhouetteProfile.h
engine/include/fleet/: FleetCommandSystem.h
engine/include/formation/: FormationSystem.h
engine/include/hangar/: HangarSystem.h
engine/include/inventory/: InventorySystem.h
engine/include/mining/: MiningSystem.h
engine/include/navigation/: NavigationSystem.h  Pathfinding.h  PathfindingComponent.h  PathfindingSystem.h  WormholeSystem.h
engine/include/networking/: BuildCommand.h  NetworkSystem.h
engine/include/notification/: NotificationSystem.h
engine/include/power/: PowerSystem.h
engine/include/procedural/: GalaxyGenerator.h
engine/include/quest/: QuestSystem.h
engine/include/rendering/: GhostRenderer.h  ParticleSystem.h  PostProcessingSystem.h  ShadowSystem.h  ShipRenderer.h
engine/include/reputation/: ReputationSystem.h
engine/include/research/: ResearchSystem.h
engine/include/rpg/: ProgressionSystem.h
engine/include/salvage/: SalvageSystem.h
engine/include/scanning/: ScanningSystem.h
engine/include/scripting/: ScriptingSystem.h
engine/include/ship_editor/: BlockPalette.h  EditorAction.h  EditorClipboard.h  EditorCommandRegistry.h  EditorGrid.h  EditorInputHandler.h  EditorSelection.h  EditorToolContext.h  EditorUI.h  EditorViewport.h  PropertyInspectorSystem.h  SelectionService.h  ShipEditorController.h  ShipEditorState.h  ShipValidator.h  SymmetrySystem.h
engine/include/ships/: Block.h  BlockPlacement.h  Blueprint.h  CapabilitySystem.h  DamageComponent.h  ModuleDef.h  Ship.h  ShipArchetype.h  ShipClassSystem.h  ShipDamage.h  ShipStats.h  StructuralIntegrity.h
engine/include/trade_route/: TradeRouteSystem.h
engine/include/trading/: TradingSystem.h
engine/include/tutorial/: TutorialSystem.h
engine/include/ui/: UIElement.h  UIPanel.h  UIRenderer.h  UISystem.h  UITypes.h
engine/include/weapons/: WeaponSystem.h
engine/src/: editor_main.cpp  main.cpp
engine/src/achievement/: AchievementSystem.cpp
engine/src/ai/: AIDecisionSystem.cpp  AIShipBuilder.cpp  AISteeringSystem.cpp
engine/src/audio/: AudioSystem.cpp
engine/src/combat/: CombatSystem.cpp  LootSystem.cpp  ShieldSystem.cpp  StatusEffectSystem.cpp  TargetLockSystem.cpp
engine/src/core/: Engine.cpp  Math.cpp
engine/src/core/config/: ConfigurationManager.cpp
engine/src/core/ecs/: EntityManager.cpp
engine/src/core/events/: EventSystem.cpp
engine/src/core/logging/: Logger.cpp
engine/src/core/persistence/: SaveGameManager.cpp
engine/src/crafting/: CraftingSystem.cpp  RefinerySystem.cpp
engine/src/crew/: CrewSystem.cpp
engine/src/debug_tools/: DebugRenderer.cpp  PerformanceMonitor.cpp
engine/src/diplomacy/: DiplomacySystem.cpp
engine/src/factions/: FactionProfile.cpp  SilhouetteProfile.cpp
engine/src/fleet/: FleetCommandSystem.cpp
engine/src/formation/: FormationSystem.cpp
engine/src/hangar/: HangarSystem.cpp
engine/src/inventory/: InventorySystem.cpp
engine/src/mining/: MiningSystem.cpp
engine/src/navigation/: NavigationSystem.cpp  Pathfinding.cpp  PathfindingComponent.cpp  PathfindingSystem.cpp  WormholeSystem.cpp
engine/src/networking/: BuildCommand.cpp  NetworkSystem.cpp
engine/src/notification/: NotificationSystem.cpp
engine/src/power/: PowerSystem.cpp
engine/src/procedural/: GalaxyGenerator.cpp
engine/src/quest/: QuestSystem.cpp
engine/src/rendering/: GhostRenderer.cpp  ParticleSystem.cpp  PostProcessingSystem.cpp  ShadowSystem.cpp  ShipRenderer.cpp
engine/src/reputation/: ReputationSystem.cpp
engine/src/research/: ResearchSystem.cpp
engine/src/rpg/: ProgressionSystem.cpp
engine/src/salvage/: SalvageSystem.cpp
engine/src/scanning/: ScanningSystem.cpp
engine/src/scripting/: ScriptingSystem.cpp
engine/src/ship_editor/: BlockPalette.cpp  EditorAction.cpp  EditorClipboard.cpp  EditorCommandRegistry.cpp  EditorGrid.cpp  EditorInputHandler.cpp  EditorSelection.cpp  EditorUI.cpp  EditorViewport.cpp  PropertyInspectorSystem.cpp  SelectionService.cpp  ShipEditorController.cpp  ShipEditorState.cpp  ShipValidator.cpp  SymmetrySystem.cpp
engine/src/ships/: Block.cpp  BlockPlacement.cpp  Blueprint.cpp  CapabilitySystem.cpp  DamageComponent.cpp  ModuleDef.cpp  Ship.cpp  ShipArchetype.cpp  ShipClassSystem.cpp  ShipDamage.cpp  ShipStats.cpp  StructuralIntegrity.cpp
engine/src/trade_route/: TradeRouteSystem.cpp
engine/src/trading/: TradingSystem.cpp
engine/src/tutorial/: TutorialSystem.cpp
engine/src/ui/: UIElement.cpp  UIPanel.cpp  UIRenderer.cpp  UISystem.cpp
engine/src/weapons/: WeaponSystem.cpp
engine/tests/: test_main.cpp
(+393 files in other folders)
